Add download link for zipped p2 repo of nightly build
Change-Id: I9d528c51d92291116909b5720287b2c78b569fb5
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/download/_index.html
+++ b/download/_index.html
@@ -38,6 +38,7 @@
 <p>If you like to use the latest development version or need a bugfix which is not yet released, you can install EGit and the GitHub Mylyn connector from the following update sites:</p>
 <ul>
 <li>EGit development build (master branch) - <a href="http://download.eclipse.org/egit/updates-nightly">http://download.eclipse.org/egit/updates-nightly</a></li>
+<li>EGit development build (master branch) - p2 repository ZIP download - <a href="https://repo.eclipse.org/content/groups/snapshots/org/eclipse/egit/org.eclipse.egit.repository/">https://repo.eclipse.org/content/groups/snapshots/org/eclipse/egit/org.eclipse.egit.repository/</a></li>
 <li>EGit maintenance build (latest stable branch) - <a href="http://download.eclipse.org/egit/updates-stable-nightly">http://download.eclipse.org/egit/updates-stable-nightly</a></li>
 <li>GitHub Mylyn Connector development build (master branch) - <a href="http://download.eclipse.org/egit/github/updates-nightly">http://download.eclipse.org/egit/github/updates-nightly</a></li>
 </ul>
