--- a/download/_index.html
+++ b/download/_index.html
@@ -12,14 +12,14 @@
 <p>EGit can be installed in the following ways:</p>
 <ul>
 <li>Main Update Site: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
-<li>Oxygen Update Site (Oxygen contains 4.8.0): <a href="http://download.eclipse.org/releases/neon">http://download.eclipse.org/releases/oxygen</a></li>
+<li>Oxygen Update Site (Oxygen.2 contains 4.9.2): <a href="http://download.eclipse.org/releases/neon">http://download.eclipse.org/releases/oxygen</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
 <p>GitHub Mylyn Connector can be installed in the following ways:</p>
 <ul>
 <li>Main Update Site: <a href="http://download.eclipse.org/egit/github/updates">http://download.eclipse.org/egit/github/updates</a> (Recommended)</li>
-<li>Oxygen Update Site (Oxygen contains 4.8.0): <a href="http://download.eclipse.org/releases/neon">http://download.eclipse.org/releases/oxygen</a></li>
+<li>Oxygen Update Site (Oxygen.2 contains 4.9.2): <a href="http://download.eclipse.org/releases/neon">http://download.eclipse.org/releases/oxygen</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/github-mylyn-connector">Eclipse Marketplace</a></li>
 </ul>
 
