Update Egit website for new Eclipse IDE theme
Bug: 533554
Change-Id: I81e0df5417217a8a44eb4f19fec08c48022ec92a
Signed-off-by: Christopher Guindon <chris.guindon@eclipse-foundation.org>

--- a/_index.html
+++ b/_index.html
@@ -1,68 +1,53 @@
-<div id="bigbuttons">
-<h3>Primary Links</h3>
-<ul>
-	<li><a id="buttonDownload" href="/egit/download/" title="Download">Eclipse
-	Distribution, Update Site, Dropins</a></li>
-	<li><a id="buttonDocumentation" href="/egit/documentation/"
-		title="Documentation">Tutorials, Examples, Videos, Reference Documentation</a></li>
-	<li><a id="buttonSupport" href="/egit/support/" title="Support">Bug
-	Tracker, Newsgroup, Support</a></li>
-	<li><a id="buttonInvolved" href="/egit/developers/" title="Getting Involved">Contributor Guide, Mailing Lists, Wiki</a></li>
-</ul>
+<div class="col-md-18">
+  <h1>EGit</h1>
+  
+  <a href="/projects/project_summary.php?projectid=technology.egit">About This Project</a>
+  
+  <p>
+  EGit is an Eclipse Team provider for the
+  <a href="http://git-scm.com/">Git version control system</a>.  Git is a
+  distributed SCM, which means every developer has a full copy of all history
+  of every revision of the code, making queries against the history very fast
+  and versatile.
+  </p>
+  
+  <p>The EGit project is implementing Eclipse tooling on top of the
+  <a href="http://www.eclipse.org/jgit/">JGit</a> Java implementation of Git.
+  </p>
+  
+  <p>
+  <img src="welcome.png" alt="EGit screenshot">
+  </p>
 </div>
 
-<div id="midcolumn">
-
-<h3>EGit</h3>
-
-<script type="text/javascript">
-          url_site = 'http://marketplace.eclipse.org/node/1336'
-        </script>
-        <script src="http://marketplace.eclipse.org/sites/all/modules/drigg_external/js/button.js" type="text/javascript"></script>
-<br/>
-<a href="/projects/project_summary.php?projectid=technology.egit">About This Project</a>
-
-<p>
-EGit is an Eclipse Team provider for the
-<a href="http://git-scm.com/">Git version control system</a>.  Git is a
-distributed SCM, which means every developer has a full copy of all history
-of every revision of the code, making queries against the history very fast
-and versatile.
-</p>
-
-<p>The EGit project is implementing Eclipse tooling on top of the
-<a href="http://www.eclipse.org/jgit/">JGit</a> Java implementation of Git.
-</p>
-
-<p>
-	<img src="welcome.png" alt="EGit screenshot">
-</p>
-</div>
-
-<div id="rightcolumn">
-	<h3>Committers</h3>
-		<ul>
-			<li>Andrey Loskutov</li>
-			<li>Benjamin Muskalla (Tasktop)</li>
-			<li>Chris Aniszczyk (Twitter)</li>
-			<li>Christian Halstrick (SAP)</li>
-			<li>Dani Megert (IBM)</li>
-			<li>Dariusz Luksza (CollabNet)</li>
-			<li>Gunnar Wagenknecht (Ageto)</li>
-			<li>Jens Baumgart (SAP)</li>
-			<li>Kevin Sawicki (GitHub)</li>
-			<li>Konrad Kügler</li>
-			<li>Laurent Goubet (Obeo)</li>
-			<li>Mathias Kinzler (SAP)</li>
-			<li>Matthias Sohn (SAP)</li>
-			<li>Mik Kersten (Tasktop)</li>
-			<li>Mykola Nikishov</li>
-			<li>Remy Suen (IBM)</li>
-			<li>Robin Rosenberg (Dewire)</li>
-			<li>Robin Stocker</li>
-			<li>Shawn Pearce (Google)</li>
-			<li>Stefan Lay (SAP)</li>
-			<li>Thomas Wolf</li>
-			<li>Tomasz Zarna (Tasktop)</li>
-		</ul>		
+<div class="col-md-6">
+  <div class="sideitem">
+    <h6>Committers</h6>
+    <div class="content">
+       <ul>
+         <li>Andrey Loskutov</li>
+         <li>Benjamin Muskalla (Tasktop)</li>
+         <li>Chris Aniszczyk (Twitter)</li>
+         <li>Christian Halstrick (SAP)</li>
+         <li>Dani Megert (IBM)</li>
+         <li>Dariusz Luksza (CollabNet)</li>
+         <li>Gunnar Wagenknecht (Ageto)</li>
+         <li>Jens Baumgart (SAP)</li>
+         <li>Kevin Sawicki (GitHub)</li>
+         <li>Konrad Kügler</li>
+         <li>Laurent Goubet (Obeo)</li>
+         <li>Mathias Kinzler (SAP)</li>
+         <li>Matthias Sohn (SAP)</li>
+         <li>Mik Kersten (Tasktop)</li>
+         <li>Mykola Nikishov</li>
+         <li>Remy Suen (IBM)</li>
+         <li>Robin Rosenberg (Dewire)</li>
+         <li>Robin Stocker</li>
+         <li>Shawn Pearce (Google)</li>
+         <li>Stefan Lay (SAP)</li>
+         <li>Thomas Wolf</li>
+         <li>Tomasz Zarna (Tasktop)</li>
+      </ul>
+    </div>
+  </div>
 </div>
