--- a/download/_index.html
+++ b/download/_index.html
@@ -1,11 +1,10 @@
-<p><a href="http://marketplace.eclipse.org/content/egit-git-team-provider">
-						<img src="/egit/images/star.png" border="0"/>
-						Like EGit? Star it as a <b>favorite</b> on Eclipse Marketplace!</a></p>
-
-<script type="text/javascript">
-          url_site = 'http://marketplace.eclipse.org/node/1336'
-        </script>
-        <script src="http://marketplace.eclipse.org/sites/all/modules/drigg_external/js/button.js" type="text/javascript"></script>
+<h1>Download</h1>
+<p>
+  <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">
+    <img src="/egit/images/star.png" border="0"/>
+    Like EGit? Star it as a <b>favorite</b> on Eclipse Marketplace!
+  </a>
+</p>
 
 <h2>Installing the Latest Release: @VERSION@</h2>
 <p>To install via one of the update site URLs listed below, copy and paste it into the &ldquo;Help &gt; Install new software&rdquo; dialog.</p>
