Update list of committers
Change-Id: I77b062682d24a3473f3a0b2ab5ee66d9a9890004
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/_index.html
+++ b/_index.html
@@ -26,25 +26,12 @@
     <div class="content">
        <ul>
          <li>Andrey Loskutov</li>
-         <li>Benjamin Muskalla (Tasktop)</li>
-         <li>Chris Aniszczyk (Twitter)</li>
          <li>Christian Halstrick (SAP)</li>
          <li>Dani Megert (IBM)</li>
-         <li>Dariusz Luksza (CollabNet)</li>
-         <li>Gunnar Wagenknecht (Ageto)</li>
-         <li>Jens Baumgart (SAP)</li>
-         <li>Kevin Sawicki (GitHub)</li>
-         <li>Konrad Kügler</li>
-         <li>Laurent Goubet (Obeo)</li>
-         <li>Mathias Kinzler (SAP)</li>
+         <li>Gunnar Wagenknecht (Salesforce)</li>
          <li>Matthias Sohn (SAP)</li>
-         <li>Mik Kersten (Tasktop)</li>
-         <li>Mykola Nikishov</li>
-         <li>Remy Suen (IBM)</li>
-         <li>Robin Rosenberg (Dewire)</li>
-         <li>Robin Stocker</li>
-         <li>Shawn Pearce (Google)</li>
-         <li>Stefan Lay (SAP)</li>
+         <li>Max Hohenegger</li>
+         <li>Michael Keppler</li>
          <li>Thomas Wolf</li>
          <li>Tomasz Zarna (Tasktop)</li>
       </ul>
