Use https for all eclipse links
Also update the URL from former ohloh.net to openhub.net.

Bug:543041
Change-Id: I178a0f2e885e5bf5b441a742ce2a5f311e946927
Signed-off-by: Michael Keppler <Michael.Keppler@gmx.de>

--- a/_index.html
+++ b/_index.html
@@ -1,8 +1,8 @@
 <div class="col-md-18">
   <h1>EGit</h1>
-  
+
   <a href="/projects/project_summary.php?projectid=technology.egit">About This Project</a>
-  
+
   <p>
   EGit is an Eclipse Team provider for the
   <a href="http://git-scm.com/">Git version control system</a>.  Git is a
@@ -10,11 +10,11 @@
   of every revision of the code, making queries against the history very fast
   and versatile.
   </p>
-  
+
   <p>The EGit project is implementing Eclipse tooling on top of the
-  <a href="http://www.eclipse.org/jgit/">JGit</a> Java implementation of Git.
+  <a href="https://www.eclipse.org/jgit/">JGit</a> Java implementation of Git.
   </p>
-  
+
   <p>
   <img src="welcome.png" alt="EGit screenshot">
   </p>
