--- a/download/_index.html
+++ b/download/_index.html
@@ -10,37 +10,37 @@
 <p>To install via one of the update site URLs listed below, copy and paste it into the &ldquo;Help &gt; Install new software&rdquo; dialog.</p>
 <p>EGit can be installed in the following ways:</p>
 <ul>
-<li>Main Update Site: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
-<li>Eclipse Releases Update Site: <a href="http://download.eclipse.org/releases/latest">http://download.eclipse.org/releases/latest</a></li>
+<li>Main Update Site: <a href="https://download.eclipse.org/egit/updates">https://download.eclipse.org/egit/updates</a> (Recommended)</li>
+<li>Eclipse Releases Update Site: <a href="https://download.eclipse.org/releases/latest">https://download.eclipse.org/releases/latest</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
 <p>GitHub Mylyn Connector can be installed in the following ways:</p>
 <ul>
-<li>Main Update Site: <a href="http://download.eclipse.org/egit/github/updates">http://download.eclipse.org/egit/github/updates</a> (Recommended)</li>
-<li>Eclipse Releases Update Site: <a href="http://download.eclipse.org/releases/latest">http://download.eclipse.org/releases/latest</a></li>
+<li>Main Update Site: <a href="https://download.eclipse.org/egit/github/updates">https://download.eclipse.org/egit/github/updates</a> (Recommended)</li>
+<li>Eclipse Releases Update Site: <a href="https://download.eclipse.org/releases/latest">https://download.eclipse.org/releases/latest</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/github-mylyn-connector">Eclipse Marketplace</a></li>
 </ul>
 
 <p>EGit p2 repository ZIP download for system integrators:</p>
 <ul>
-<li><a href="http://www.eclipse.org/downloads/download.php?file=/egit/updates/org.eclipse.egit.repository-@VERSION@.zip">@VERSION@</a></li>
+<li><a href="https://www.eclipse.org/downloads/download.php?file=/egit/updates/org.eclipse.egit.repository-@VERSION@.zip">@VERSION@</a></li>
 </ul>
 
 <h2>Older Releases</h2>
 <p>To find older releases visit the following Wiki page</p>
 <ul>
-<li><a href="http://wiki.eclipse.org/EGit/FAQ#Where_can_I_find_older_releases_of_EGit.3F">Where to find older releases</a></li>
+<li><a href="https://wiki.eclipse.org/EGit/FAQ#Where_can_I_find_older_releases_of_EGit.3F">Where to find older releases</a></li>
 </ul>
 
 <h2>Nightly Builds</h2>
 <p>If you like to use the latest development version or need a bugfix which is not yet released, you can install EGit and the GitHub Mylyn connector from the following update sites:</p>
 <ul>
-<li>EGit development build (master branch) - <a href="http://download.eclipse.org/egit/updates-nightly">http://download.eclipse.org/egit/updates-nightly</a></li>
+<li>EGit development build (master branch) - <a href="https://download.eclipse.org/egit/updates-nightly">https://download.eclipse.org/egit/updates-nightly</a></li>
 <li>EGit development build (master branch) - p2 repository ZIP download - <a href="https://repo.eclipse.org/content/groups/snapshots/org/eclipse/egit/org.eclipse.egit.repository/">https://repo.eclipse.org/content/groups/snapshots/org/eclipse/egit/org.eclipse.egit.repository/</a></li>
-<li>EGit maintenance build (latest stable branch) - <a href="http://download.eclipse.org/egit/updates-stable-nightly">http://download.eclipse.org/egit/updates-stable-nightly</a></li>
-<li>GitHub Mylyn Connector development build (master branch) - <a href="http://download.eclipse.org/egit/github/updates-nightly">http://download.eclipse.org/egit/github/updates-nightly</a></li>
+<li>EGit maintenance build (latest stable branch) - <a href="https://download.eclipse.org/egit/updates-stable-nightly">https://download.eclipse.org/egit/updates-stable-nightly</a></li>
+<li>GitHub Mylyn Connector development build (master branch) - <a href="https://download.eclipse.org/egit/github/updates-nightly">https://download.eclipse.org/egit/github/updates-nightly</a></li>
 </ul>
 <p>Because every change is reviewed before it is included in the nightly builds, they are actually quite stable.</p>
 
-<p>You can also build EGit from scratch following our <a href="http://wiki.eclipse.org/EGit/Contributor_Guide#Builds">contributor guide</a>.</p>
+<p>You can also build EGit from scratch following our <a href="https://wiki.eclipse.org/EGit/Contributor_Guide#Builds">contributor guide</a>.</p>
