--- a/support/_index.html
+++ b/support/_index.html
@@ -3,7 +3,7 @@
   <li><b><a href="/egit/documentation"
     title="Documentation">Documentation</a></b> - read our Users Guide</li>
   <li><b><a
-    href="http://www.eclipse.org/forums/index.php?t=thread&frm_id=48"
+    href="https://www.eclipse.org/forums/index.php?t=thread&frm_id=48"
     rel="nofollow">EGit Forums</a></b></li>
   <li><b><a
     href="https://dev.eclipse.org/mailman/listinfo/egit-dev"
