--- a/developers/_index.html
+++ b/developers/_index.html
@@ -1,6 +1,6 @@
 <h1>Contributing</h1>
 <ul>
-  <li><b><a href="http://wiki.eclipse.org/EGit/Contributor_Guide"
+  <li><b><a href="https://wiki.eclipse.org/EGit/Contributor_Guide"
     title="EGit Contributor Guide">EGit Contributor Guide</a></b> - How to contribute to the EGit project</li>
   <li><b><a
     href="https://dev.eclipse.org/mailman/listinfo/egit-dev"
@@ -10,7 +10,7 @@
     href="https://dev.eclipse.org/mailman/listinfo/egit-build"
     title="egit-build Mailing List"
     rel="nofollow">Build Notices Mailing List</a></b> - Subscribe to the build notification list.</li>
-  <li><b><a href="http://www.ohloh.net/projects/egit"
+  <li><b><a href="https://www.openhub.net/p/egit"
     class="external text"
-    rel="nofollow">EGit at ohloh.net</a></b> - Track the project!</li>
+    rel="nofollow">EGit at openhub.net</a></b> - Track the project!</li>
 </ul>
