Update list of committers
Change-Id: Iddae5905d822ae4c7c3cfe59e0364212dd91cebe
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/_index.html
+++ b/_index.html
@@ -25,14 +25,13 @@
     <h6>Committers</h6>
     <div class="content">
        <ul>
-         <li>Andrey Loskutov</li>
+         <li>Andrey Loskutov (Advantest)</li>
          <li>Christian Halstrick (SAP)</li>
-         <li>Dani Megert (IBM)</li>
          <li>Gunnar Wagenknecht (Salesforce)</li>
          <li>Matthias Sohn (SAP)</li>
          <li>Max Hohenegger</li>
          <li>Michael Keppler</li>
-         <li>Thomas Wolf</li>
+         <li>Thomas Wolf (Paranor)</li>
          <li>Tomasz Zarna (Tasktop)</li>
       </ul>
     </div>
