Link to N&N page
Make our New&Noteworthy pages more visible.

Change-Id: I757a7560aefb8b5b26c582f6e2fa832716529747
Signed-off-by: Thomas Wolf <thomas.wolf@paranor.ch>

--- a/download/_index.html
+++ b/download/_index.html
@@ -27,6 +27,12 @@
 <li><a href="https://www.eclipse.org/downloads/download.php?file=/egit/updates/org.eclipse.egit.repository-@VERSION@.zip">@VERSION@</a></li>
 </ul>
 
+<h2>Release Notes</h2>
+<p>
+The <a href="https://wiki.eclipse.org/EGit/New_and_Noteworthy">release notes</a>
+highlight and explain the most important changes in each major EGit release.
+</p>
+
 <h2>Older Releases</h2>
 <p>To find older releases visit the following Wiki page</p>
 <ul>
