--- a/documentation/_index.html
+++ b/documentation/_index.html
@@ -4,6 +4,8 @@
     title="Getting started">User's Guide</a></b> - read our users guide to get started</li>
   <li><b><a href="https://wiki.eclipse.org/EGit/Learning_Material"
     title="Learning">Learning</a></b> - learn from presentations, examples and tutorials</li>
+  <li><b><a href="https://wiki.eclipse.org/EGit/New_and_Noteworthy"
+    title="Release Notes">Release Notes</a></b> - the most important new features explained</li>
   <li><b><a
     href="https://www.eclipse.org/forums/index.php?t=thread&frm_id=48"
     rel="nofollow">EGit Forums</a></b> - ask questions here if you need help!</li>
