Use HTTPS instead of HTTP
Change remaining uses of http:// links  to https://.

Change-Id: Id6fe294e75f13c7bbdd6ef5bd6d88e0d90030cd0
Signed-off-by: Thomas Wolf <thomas.wolf@paranor.ch>

--- a/download/_index.html
+++ b/download/_index.html
@@ -1,6 +1,6 @@
 <h1>Download</h1>
 <p>
-  <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">
+  <a href="https://marketplace.eclipse.org/content/egit-git-team-provider">
     <img src="/egit/images/star.png" border="0"/>
     Like EGit? Star it as a <b>favorite</b> on Eclipse Marketplace!
   </a>
@@ -12,14 +12,14 @@
 <ul>
 <li>Main Update Site: <a href="https://download.eclipse.org/egit/updates">https://download.eclipse.org/egit/updates</a> (Recommended)</li>
 <li>Eclipse Releases Update Site: <a href="https://download.eclipse.org/releases/latest">https://download.eclipse.org/releases/latest</a></li>
-<li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
+<li>Via the <a href="https://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
 <p>GitHub Mylyn Connector can be installed in the following ways:</p>
 <ul>
 <li>Main Update Site: <a href="https://download.eclipse.org/egit/github/updates">https://download.eclipse.org/egit/github/updates</a> (Recommended)</li>
 <li>Eclipse Releases Update Site: <a href="https://download.eclipse.org/releases/latest">https://download.eclipse.org/releases/latest</a></li>
-<li>Via the <a href="http://marketplace.eclipse.org/content/github-mylyn-connector">Eclipse Marketplace</a></li>
+<li>Via the <a href="https://marketplace.eclipse.org/content/github-mylyn-connector">Eclipse Marketplace</a></li>
 </ul>
 
 <p>EGit p2 repository ZIP download for system integrators:</p>
