--- a/_index.html
+++ b/_index.html
@@ -5,7 +5,7 @@
 
   <p>
   EGit is an Eclipse Team provider for the
-  <a href="http://git-scm.com/">Git version control system</a>.  Git is a
+  <a href="https://git-scm.com/">Git version control system</a>.  Git is a
   distributed SCM, which means every developer has a full copy of all history
   of every revision of the code, making queries against the history very fast
   and versatile.
