Update homepage for 6.0.0.202111291000-r
Change-Id: I1082b8a56fbbbe0e59861394d1060a9601f07ece

--- a/documentation/_index.html
+++ b/documentation/_index.html
@@ -5,7 +5,9 @@
   <li><b><a href="https://wiki.eclipse.org/EGit/Learning_Material"
     title="Learning">Learning</a></b> - learn from presentations, examples and tutorials</li>
   <li><b><a href="https://wiki.eclipse.org/EGit/New_and_Noteworthy"
-    title="Release Notes">Release Notes</a></b> - the most important new features explained</li>
+    title="New and Noteworthy">New and Noteworthy</a></b> - the most important new features explained</li>
+  <li><a href="https://projects.eclipse.org/projects/technology.egit/governance"
+	title="Release Notes">Release Notes</a></li>
   <li><b><a
     href="https://www.eclipse.org/forums/index.php?t=thread&frm_id=48"
     rel="nofollow">EGit Forums</a></b> - ask questions here if you need help!</li>
