--- a/_index.html
+++ b/_index.html
@@ -1,5 +1,5 @@
 <div class="col-md-18">
-  <h1>EGit</h1>
+  <h1>Eclipse EGit™</h1>
 
   <a href="/projects/project_summary.php?projectid=technology.egit">About This Project</a>
 
