Don't mention mylyn on EGit website anymore
Mylyn isn't maintained anymore and EGit removed its Mylyn integration
in 6.3.0.

Change-Id: Ib7bd23912977e7a2ed8027e7e8b4a68a62b9484c

--- a/download/_index.html
+++ b/download/_index.html
@@ -15,13 +15,6 @@
 <li>Via the <a href="https://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
-<p>GitHub Mylyn Connector can be installed in the following ways:</p>
-<ul>
-<li>Main Update Site: <a href="https://download.eclipse.org/egit/github/updates">https://download.eclipse.org/egit/github/updates</a> (Recommended)</li>
-<li>Eclipse Releases Update Site: <a href="https://download.eclipse.org/releases/latest">https://download.eclipse.org/releases/latest</a></li>
-<li>Via the <a href="https://marketplace.eclipse.org/content/github-mylyn-connector">Eclipse Marketplace</a></li>
-</ul>
-
 <p>EGit p2 repository ZIP download for system integrators:</p>
 <ul>
 <li><a href="https://www.eclipse.org/downloads/download.php?file=/egit/updates/org.eclipse.egit.repository-@VERSION@.zip">@VERSION@</a></li>
@@ -40,12 +33,11 @@ highlight and explain the most important changes in each major EGit release.
 </ul>
 
 <h2>Nightly Builds</h2>
-<p>If you like to use the latest development version or need a bugfix which is not yet released, you can install EGit and the GitHub Mylyn connector from the following update sites:</p>
+<p>If you like to use the latest development version or need a bugfix which is not yet released, you can install EGit from the following update sites:</p>
 <ul>
 <li>EGit development build (master branch) - <a href="https://download.eclipse.org/egit/updates-nightly">https://download.eclipse.org/egit/updates-nightly</a></li>
 <li>EGit development build (master branch) - p2 repository ZIP download - <a href="https://repo.eclipse.org/content/groups/snapshots/org/eclipse/egit/org.eclipse.egit.repository/">https://repo.eclipse.org/content/groups/snapshots/org/eclipse/egit/org.eclipse.egit.repository/</a></li>
 <li>EGit maintenance build (latest stable branch) - <a href="https://download.eclipse.org/egit/updates-stable-nightly">https://download.eclipse.org/egit/updates-stable-nightly</a></li>
-<li>GitHub Mylyn Connector development build (master branch) - <a href="https://download.eclipse.org/egit/github/updates-nightly">https://download.eclipse.org/egit/github/updates-nightly</a></li>
 </ul>
 <p>Because every change is reviewed before it is included in the nightly builds, they are actually quite stable.</p>
 
