Main page: update committers listing
Remove defunct company name from my entry.

--- a/_index.html
+++ b/_index.html
@@ -31,7 +31,7 @@
          <li>Matthias Sohn (SAP)</li>
          <li>Max Hohenegger</li>
          <li>Michael Keppler</li>
-         <li>Thomas Wolf (Paranor)</li>
+         <li>Thomas Wolf</li>
          <li>Tomasz Zarna (Tasktop)</li>
       </ul>
     </div>
