Adapt URLs to moved wiki and issue tracker
We now use GitHub to host wiki and issues for JGit and EGit.

Change-Id: I8ad633323cea4bda236d90399c1df2e384446ae0

--- a/download/_index.html
+++ b/download/_index.html
@@ -22,14 +22,14 @@
 
 <h2>Release Notes</h2>
 <p>
-The <a href="https://wiki.eclipse.org/EGit/New_and_Noteworthy">release notes</a>
+The <a href="https://github.com/eclipse-egit/egit/wiki/New-and-Noteworthy">release notes</a>
 highlight and explain the most important changes in each major EGit release.
 </p>
 
 <h2>Older Releases</h2>
 <p>To find older releases visit the following Wiki page</p>
 <ul>
-<li><a href="https://wiki.eclipse.org/EGit/FAQ#Where_can_I_find_older_releases_of_EGit.3F">Where to find older releases</a></li>
+<li><a href="https://github.com/eclipse-egit/egit/wiki/FAQ#where-can-i-find-older-releases-of-egit">Where to find older releases</a></li>
 </ul>
 
 <h2>Nightly Builds</h2>
@@ -41,4 +41,4 @@ highlight and explain the most important changes in each major EGit release.
 </ul>
 <p>Because every change is reviewed before it is included in the nightly builds, they are actually quite stable.</p>
 
-<p>You can also build EGit from scratch following our <a href="https://wiki.eclipse.org/EGit/Contributor_Guide#Builds">contributor guide</a>.</p>
+<p>You can also build EGit from scratch following our <a href="https://github.com/eclipse-egit/egit/wiki/Contributor-Guide#builds">contributor guide</a>.</p>
