--- a/support/_index.html
+++ b/support/_index.html
@@ -10,9 +10,9 @@
     title="egit-dev Mailing List"
     rel="nofollow">Developer Mailing List</a></b> - Ask technical questions on our mailing list.</li>
   <li><b><a
-    href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&amp;short_desc_type=allwordssubstr&amp;short_desc=&amp;classification=Technology&amp;product=EGit&amp;long_desc_type=allwordssubstr&amp;long_desc=&amp;bug_file_loc_type=allwordssubstr&amp;bug_file_loc=&amp;status_whiteboard_type=allwordssubstr&amp;status_whiteboard=&amp;keywords_type=allwords&amp;keywords=&amp;bug_status=NEW&amp;bug_status=ASSIGNED&amp;bug_status=REOPENED&amp;emailtype1=exact&amp;email1=&amp;emailtype2=substring&amp;email2=&amp;bugidtype=include&amp;bug_id=&amp;votes=&amp;chfieldfrom=&amp;chfieldto=Now&amp;chfieldvalue=&amp;cmdtype=doit&amp;order=Reuse+same+sort+as+last+time&amp;field0-0-0=noop&amp;type0-0-0=noop&amp;value0-0-0="
-    rel="nofollow">EGit Bugzilla</a></b> - review and create Bugzilla entries</li>
-  <li><b><a
-    href="https://bugs.eclipse.org/bugs/enter_bug.cgi?product=EGit&amp;rep_platform=All&amp;op_sys=All"
+    href="https://github.com/eclipse-egit/egit/issues"
     rel="nofollow">File a bug</a></b> - file bugs and feature requests</li>
+  <li><b><a
+    href="https://bugs.eclipse.org/bugs/query.cgi?classification=Technology&product=EGit&query_format=advanced"
+    rel="nofollow">(read-only) bugs on old deprecated bugzilla</a></b> - access old bugs and feature requests</li>
 </ul>
