--- a/developers/_index.html
+++ b/developers/_index.html
@@ -1,6 +1,6 @@
 <h1>Contributing</h1>
 <ul>
-  <li><b><a href="https://wiki.eclipse.org/EGit/Contributor_Guide"
+  <li><b><a href="https://github.com/eclipse-egit/egit/wiki/Contributor-Guide"
     title="EGit Contributor Guide">EGit Contributor Guide</a></b> - How to contribute to the EGit project</li>
   <li><b><a
     href="https://dev.eclipse.org/mailman/listinfo/egit-dev"
