--- a/documentation/_index.html
+++ b/documentation/_index.html
@@ -1,10 +1,8 @@
 <h1>Documentation</h1>
 <ul>
-  <li><b><a href="https://wiki.eclipse.org/EGit/User_Guide"
+  <li><b><a href="https://github.com/eclipse-egit/egit/wiki/User-Guide"
     title="Getting started">User's Guide</a></b> - read our users guide to get started</li>
-  <li><b><a href="https://wiki.eclipse.org/EGit/Learning_Material"
-    title="Learning">Learning</a></b> - learn from presentations, examples and tutorials</li>
-  <li><b><a href="https://wiki.eclipse.org/EGit/New_and_Noteworthy"
+  <li><b><a href="https://github.com/eclipse-egit/egit/wiki/New-and-Noteworthy"
     title="New and Noteworthy">New and Noteworthy</a></b> - the most important new features explained</li>
   <li><a href="https://projects.eclipse.org/projects/technology.egit/governance"
 	title="Release Notes">Release Notes</a></li>
@@ -12,9 +10,9 @@
     href="https://www.eclipse.org/forums/index.php?t=thread&frm_id=48"
     rel="nofollow">EGit Forums</a></b> - ask questions here if you need help!</li>
   <li><b><a
-    href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&amp;short_desc_type=allwordssubstr&amp;short_desc=&amp;classification=Technology&amp;product=EGit&amp;long_desc_type=allwordssubstr&amp;long_desc=&amp;bug_file_loc_type=allwordssubstr&amp;bug_file_loc=&amp;status_whiteboard_type=allwordssubstr&amp;status_whiteboard=&amp;keywords_type=allwords&amp;keywords=&amp;bug_status=NEW&amp;bug_status=ASSIGNED&amp;bug_status=REOPENED&amp;emailtype1=exact&amp;email1=&amp;emailtype2=substring&amp;email2=&amp;bugidtype=include&amp;bug_id=&amp;votes=&amp;chfieldfrom=&amp;chfieldto=Now&amp;chfieldvalue=&amp;cmdtype=doit&amp;order=Reuse+same+sort+as+last+time&amp;field0-0-0=noop&amp;type0-0-0=noop&amp;value0-0-0="
-    rel="nofollow">EGit Bugzilla</a></b> - review and create Bugzilla entries</li>
-  <li><b><a
-    href="https://bugs.eclipse.org/bugs/enter_bug.cgi?product=EGit&amp;rep_platform=All&amp;op_sys=All"
+    href="https://github.com/eclipse-egit/egit/issues"
     rel="nofollow">File a bug</a></b> - file bugs and feature requests</li>
+  <li><b><a
+    href="https://bugs.eclipse.org/bugs/query.cgi?classification=Technology&product=EGit&query_format=advanced"
+    rel="nofollow">(read-only) bugs on old deprecated bugzilla</a></b> - access old bugs and feature requests</li>
 </ul>
